feature(nm): 增加命名缩写。
1、修改《编程常用命名及缩写_210222》文件，增加单词缩写；

--- a/nm/编程常用命名及缩写_210222.md
+++ b/nm/编程常用命名及缩写_210222.md
@@ -137,6 +137,7 @@ tags:
 | header | hdr | 标头，首标 |
 | heavy | hvy | 沉重的 |
 | help | hlp | 帮助 |
+| highlight | hl | 高亮 |
 | history | hist | 历史 |
 | idle | idl | 懒惰的，慵懒的 |
 | image | img | 图像 |
@@ -154,6 +155,7 @@ tags:
 | log | log | 日志，记录 |
 | long | lng | 长的 |
 | loop | loop | 循环，环形，使成环 |
+| mark | mk | 标记 |
 | master | mstr | 主人，雇主 |
 | match | mtch | 配对，相配，比赛，竞赛 |
 | maximum | max | 最大值 |
