feature(*): 上传sftiic模块代码。
1、上传软件IIC模块c代码；
2、修改《编程常用命名及缩写_210222》文件中的错误单词；

--- a/nm/编程常用命名及缩写_210222.md
+++ b/nm/编程常用命名及缩写_210222.md
@@ -418,7 +418,7 @@ tags:
 | counter | cnt | 计数器 |
 | button | btn | 按钮 |
 | comboBox | cmb | 下拉框 |
-| lable | lbl | 标签 |
+| label | lbl | 标签 |
 | PlainTextEdit | pte | 纯文本编辑框 |
 | progressBar | prg | 进度条 |
 | PushButton | pb | 按钮 |
