docs(nm): 文章修改。
1、《编程常用命名及缩写_210222》增加单词缩写记录；

--- a/nm/编程常用命名及缩写_210222.md
+++ b/nm/编程常用命名及缩写_210222.md
@@ -5,7 +5,7 @@ updated: 2021-02-23 21:26:00
 layout: post
 comments: true
 categories:
-    - [软件规范]
+    - [规范]
 tags:
     - 缩写
     - 命名
@@ -34,6 +34,7 @@ tags:
 | advanced | adv | 先进的 |
 | algorithm | alg | 算法 |
 | amount | amt | 数量 |
+| amplitude | amp | 振幅 |
 | analysis | anls | 分析 |
 | application | app | 应用程序 |
 | area | ar | 地区，地域 |
@@ -53,6 +54,7 @@ tags:
 | broadcast | bc | 广播 |
 | buffer | buf | 缓冲区 |
 | bus | bus | 总线 |
+| bypass | byp | 避开，绕过 |
 | byte | by | 字节 |
 | cache | cach | 缓存 |
 | calibration | cal | 校准 |
@@ -78,6 +80,7 @@ tags:
 | convert | cvt | 变换 |
 | crash | cr | 死机，崩溃，碰撞 |
 | critical | crt | 批评的，关键的，严重的 |
+| cycle | cy | 循环 |
 | debug | dbg | 调试，排错 |
 | delete | del | 删除 |
 | describe | des | 描述 |
@@ -96,6 +99,7 @@ tags:
 | difference value | dv | 差值 |
 | different | diff | 不同的 |
 | digital | digi | 数字的 |
+| direction | dir | 方向 |
 | directory | dir | 目录 |
 | divide | div | 分离 |
 | document | doc | 文档 |
@@ -107,6 +111,7 @@ tags:
 | dynamic | dyna | 动态的 |
 | each | ea | 每个 |
 | eeprom | ee | 电可擦可编程只读存储器 |
+| embedded | embd | 嵌入式 |
 | enable | en | 使能 |
 | encode | enc | 编码 |
 | enter | entr | 进入 |
@@ -142,6 +147,7 @@ tags:
 | idle | idl | 懒惰的，慵懒的 |
 | image | img | 图像 |
 | implement | impl | 实施 |
+| include | inc | 包含 |
 | info | inf | 信息，情报 |
 | information | info | 信息，情报 |
 | initialize | init | 初始化 |
@@ -309,6 +315,7 @@ tags:
 | thread | thd | 线程 |
 | threshold | thr | 阈值 |
 | trigger | trig | 触发 |
+| trim | trim | 修剪、切除、校准（频率） |
 | up | up | 上 |
 | uplink | ul | 上行链路 |
 | background | bg | 背景 |
@@ -479,6 +486,8 @@ tags:
 | hamming code | hc | 汉明码 |
 | percent point | pp | 百分比 |
 | power control | pwc | 电源控制 |
+| pull down | pd | 下拉 |
+| pull up | pu | 上拉 |
 | embedded flash management | efm | 嵌入式Flash管理 |
 | forward error correcting code | fec | 前向纠错码 |
 | serial port | sp | 串口 |
