--- a/nm/编程常用命名及缩写.md
+++ b/nm/编程常用命名及缩写.md
@@ -33,11 +33,12 @@ tags:
 | advance | adv | 进展，进步 |
 | advanced | adv | 先进的 |
 | algorithm | alg | 算法 |
+| alpha | ap | 阿尔法 |
 | amount | amt | 数量 |
 | amplitude | amp | 振幅 |
 | analysis | anls | 分析 |
 | application | app | 应用程序 |
-| area | ar | 地区，地域 |
+| area | ar | 地区，地域，面积 |
 | around | arnd | 围绕 |
 | assistant | ast | 助手，助理的 |
 | asynchronization | async | 异步 |
@@ -48,6 +49,7 @@ tags:
 | battery | bat | 电池 |
 | beacon | bcn | 信标 |
 | begin | beg | 启动 |
+| beta | bt | 贝塔 |
 | binary | bin | 二进制 |
 | bitmap | bmp | 位图 |
 | box | bx | 盒，箱 |
@@ -81,6 +83,7 @@ tags:
 | crash | cr | 死机，崩溃，碰撞 |
 | critical | crt | 批评的，关键的，严重的 |
 | cycle | cy | 循环 |
+| day | d | 日 |
 | debug | dbg | 调试，排错 |
 | delete | del | 删除 |
 | describe | des | 描述 |
@@ -141,7 +144,9 @@ tags:
 | head | hd | 头 |
 | header | hdr | 标头，首标 |
 | heavy | hvy | 沉重的 |
+| height | hgt | 高 |
 | help | hlp | 帮助 |
+| phase | ph | 阶段 |
 | highlight | hl | 高亮 |
 | history | hist | 历史 |
 | idle | idl | 懒惰的，慵懒的 |
@@ -160,7 +165,8 @@ tags:
 | light | lt | 轻的，光线 |
 | log | log | 日志，记录 |
 | long | lng | 长的 |
-| loop | loop | 循环，环形，使成环 |
+| loop | lp | 循环，环形，使成环 |
+| major | maj | 主 |
 | mark | mk | 标记 |
 | master | mstr | 主人，雇主 |
 | match | mtch | 配对，相配，比赛，竞赛 |
@@ -168,8 +174,11 @@ tags:
 | menu | men | 菜单 |
 | message | msg | 消息 |
 | minimum | min | 最小值 |
+| minor | mn | 次的 |
 | mode | md | 模式 |
 | model | mdl | 模型，模式，典型 |
+| module | mod | 模块 |
+| month | mo | 月 |
 | move | mov | 移动 |
 | name | nm | 名字，名称 |
 | nil | nil | 无 |
@@ -185,6 +194,7 @@ tags:
 | pair | pair | 配对 |
 | parity | par | 奇偶校验 |
 | part | pt | 部分 |
+| patch | pat | 修订 |
 | path | pth | 路径 |
 | payload | pld | 有效载荷 |
 | parameter | param | 参数 |
@@ -218,13 +228,13 @@ tags:
 | query | qry | 询问 |
 | quick | qik | 迅速 |
 | quit | q | 退出 |
-| Quotient | qtnt | 商（除法结果） |
+| quotient | qtnt | 商（除法结果） |
 | read | rd | 读 |
 | recall | rcl | 召回，回想起，回归请求 |
 | record | rec | 记录 |
 | reference | ref | 引用 |
 | report | rpt | 报告 |
-| release | rls | 释放、公开、发布 |
+| release | rls | 释放、公开、发布、放开 |
 | response | resp | 响应 |
 | restart | rst | 重新启动 |
 | right | rt | 右边的，右侧的 |
@@ -240,6 +250,7 @@ tags:
 | send | snd | 发送 |
 | sequence | seq | 序列，次序 |
 | serial | ser | 顺序排列的，连续的，多次的 |
+| series | ser | 系列 |
 | set | set | 设置 |
 | set | set | 集合 |
 | short | shrt | 短的 |
@@ -250,6 +261,7 @@ tags:
 | source | src | 源 |
 | space | sp | 间距，空间 |
 | stable | stb | 稳定的，稳固的 |
+| stage | stg | 状态 |
 | start | strt | 开始 |
 | state | sta | 状态 |
 | static | stc | 静态的 |
@@ -257,8 +269,10 @@ tags:
 | string | str | 字符串 |
 | study | st | 学习 |
 | style | sty | 风格，样式 |
+| sublevel | sublv | 子级 |
 | success | scs | 成功 |
 | summation | sum | 和 |
+| super | supr | 超级 |
 | surplus | sur | 剩余，过剩，盈余 |
 | suspend | sus | 暂停，挂起 |
 | synchronization | sync | 同步 |
@@ -314,11 +328,13 @@ tags:
 | standard | std | 标准 |
 | thread | thd | 线程 |
 | threshold | thr | 阈值 |
+| triangle | tri | 三角形 |
 | trigger | trig | 触发 |
 | trim | trim | 修剪、切除、校准（频率） |
 | up | up | 上 |
 | uplink | ul | 上行链路 |
 | background | bg | 背景 |
+| base | b | 基础 |
 | escape | esc | 退出 |
 | user | usr | 用户 |
 | lift | lft | 举起，抬起 |
@@ -396,6 +412,7 @@ tags:
 | run | run | 运行 |
 | select | sel | 选择 |
 | test | tst | 测试 |
+| version | ver | 版本 |
 | vertical | vert | 垂直 |
 | view | vw | 视野，见解 |
 | vice | vice | 副的 |
@@ -405,10 +422,12 @@ tags:
 | warning | wrn | 警告 |
 | wave | wv | 波动 |
 | waveform | wf | 波形 |
+| weak | wk | 弱 |
 | weight | wt | 重量，权重 |
 | word | wd | 单词，字 |
 | work | wrk | 工作 |
 | write | wr | 写 |
+| year | yr | 年 |
 
 ## 3 常用控件命名及缩写
 
@@ -432,7 +451,7 @@ tags:
 | pageIndicator | pgindic | Tab分页控件 |
 | radioButton | rdo | 单选框 |
 | rangeSlider | rngsld | 滑块 |
-| screen | scr | 屏 |
+| screen | scr | 屏，筛选 |
 | scrollView | svw | 视图滚动 |
 | scrollBar | vsb（垂直）/hsb（水平） | 滚动条 |
 | slave | slv | 仆从 |
@@ -459,6 +478,7 @@ tags:
 | verticallayout | vl | 垂直布局 |
 | widget | wg | 小器物，小装置 |
 | window | win | 窗口 |
+| force | frc | 强制 |
 | form | frm | 表单 |
 | textBox | txt | 文本框 |
 | textBrowser | tb | 文本浏览器 |
