docs(nm): 增加单词缩写
1、修改文件《编程常用命名及缩写_210222》，增加单词缩写；
2、修改文件名为《软件历史版本检索表_200811》；

--- a/nm/编程常用命名及缩写_210222.md
+++ b/nm/编程常用命名及缩写_210222.md
@@ -29,15 +29,17 @@ tags:
 | action | act | 行动，行为 |
 | active | act | 活跃的 |
 | acknowledgment | ack | 应答 |
-| address | addr | 地址 |
+| address | adr | 地址 |
 | advance | adv | 进展，进步 |
 | advanced | adv | 先进的 |
 | algorithm | alg | 算法 |
+| alpha | ap | 阿尔法 |
+| amend | amd | 修正，修订 |
 | amount | amt | 数量 |
 | amplitude | amp | 振幅 |
 | analysis | anls | 分析 |
 | application | app | 应用程序 |
-| area | ar | 地区，地域 |
+| area | ar | 地区，地域，面积 |
 | around | arnd | 围绕 |
 | assistant | ast | 助手，助理的 |
 | asynchronization | async | 异步 |
@@ -48,14 +50,16 @@ tags:
 | battery | bat | 电池 |
 | beacon | bcn | 信标 |
 | begin | beg | 启动 |
+| beta | bt | 贝塔 |
 | binary | bin | 二进制 |
+| bit | b | 位 |
 | bitmap | bmp | 位图 |
 | box | bx | 盒，箱 |
 | broadcast | bc | 广播 |
 | buffer | buf | 缓冲区 |
 | bus | bus | 总线 |
 | bypass | byp | 避开，绕过 |
-| byte | by | 字节 |
+| byte | by/B | 字节 |
 | cache | cach | 缓存 |
 | calibration | cal | 校准 |
 | callback | cb | 回调 |
@@ -68,6 +72,7 @@ tags:
 | clear | clr | 清除 |
 | clock | clk | 时钟 |
 | close | cl | 关闭 |
+| circular | cir | 圆形 |
 | circuit | crt | 电路 |
 | collect | coll | 采集，收集 |
 | command | cmd | 命令 |
@@ -81,7 +86,10 @@ tags:
 | crash | cr | 死机，崩溃，碰撞 |
 | critical | crt | 批评的，关键的，严重的 |
 | cycle | cy | 循环 |
+| day | d | 日 |
+| dead | ded | 死 |
 | debug | dbg | 调试，排错 |
+| deep | dp | 深的，厚的 |
 | delete | del | 删除 |
 | describe | des | 描述 |
 | destination | dest | 目的地 |
@@ -114,12 +122,14 @@ tags:
 | embedded | embd | 嵌入式 |
 | enable | en | 使能 |
 | encode | enc | 编码 |
+| endian | endn | 字节序 |
 | enter | entr | 进入 |
 | environment | env | 环境 |
 | equal | eq | 相等 |
 | erase | ers | 擦除 |
 | error | err | 错误 |
 | event | evt | 事件 |
+| example | ex | 例子，例证 |
 | execute | exec | 执行 |
 | exit | ex | 出口，退场 |
 | factory | fcty | 工厂 |
@@ -141,12 +151,16 @@ tags:
 | head | hd | 头 |
 | header | hdr | 标头，首标 |
 | heavy | hvy | 沉重的 |
+| height | hgt | 高 |
 | help | hlp | 帮助 |
+| phase | ph | 阶段 |
+| hide | hd | 隐藏 |
 | highlight | hl | 高亮 |
 | history | hist | 历史 |
 | idle | idl | 懒惰的，慵懒的 |
 | image | img | 图像 |
 | implement | impl | 实施 |
+| incell | ic | 细胞内部，材质，内嵌式 |
 | include | inc | 包含 |
 | info | inf | 信息，情报 |
 | information | info | 信息，情报 |
@@ -160,7 +174,9 @@ tags:
 | light | lt | 轻的，光线 |
 | log | log | 日志，记录 |
 | long | lng | 长的 |
-| loop | loop | 循环，环形，使成环 |
+| loop | lp | 循环，环形，使成环 |
+| major | maj | 主 |
+| map | map | 地图，映射 |
 | mark | mk | 标记 |
 | master | mstr | 主人，雇主 |
 | match | mtch | 配对，相配，比赛，竞赛 |
@@ -168,10 +184,15 @@ tags:
 | menu | men | 菜单 |
 | message | msg | 消息 |
 | minimum | min | 最小值 |
+| minor | mn | 次的 |
 | mode | md | 模式 |
 | model | mdl | 模型，模式，典型 |
+| modification | mod | 修改，更改 |
+| module | mod | 模块 |
+| month | mo | 月 |
 | move | mov | 移动 |
 | name | nm | 名字，名称 |
+| next | nxt | 下次，其次 |
 | nil | nil | 无 |
 | node | nd | 节点 |
 | none | none | 毫无 |
@@ -185,6 +206,7 @@ tags:
 | pair | pair | 配对 |
 | parity | par | 奇偶校验 |
 | part | pt | 部分 |
+| patch | pat | 修订 |
 | path | pth | 路径 |
 | payload | pld | 有效载荷 |
 | parameter | param | 参数 |
@@ -195,9 +217,10 @@ tags:
 | performance | perf | 性能 |
 | period | prd | 周期 |
 | peripheral | periph | 外围设备 |
+| perimeter | perim | 周长 |
 | pin | pin | 引脚 |
 | plot | plt | 绘制，情节 |
-| point | pt | 点 |
+| point | pt/p | 点 |
 | pointer | ptr | 指针 |
 | polarity | pol | 极性 |
 | port | pt | 口 |
@@ -209,6 +232,7 @@ tags:
 | pressure | pres | 压力 |
 | previous | pre | 前一个 |
 | process/procedure | proc | 进程/过程 |
+| project | proj | 项目，计划 |
 | protect | prot | 保护，防护 |
 | protection | prot | 保护 |
 | protocol | prot | 协议，规章制度 |
@@ -218,17 +242,19 @@ tags:
 | query | qry | 询问 |
 | quick | qik | 迅速 |
 | quit | q | 退出 |
-| Quotient | qtnt | 商（除法结果） |
+| quotient | qtnt | 商（除法结果） |
+| raw | raw | 生的，原始的 |
 | read | rd | 读 |
 | recall | rcl | 召回，回想起，回归请求 |
 | record | rec | 记录 |
 | reference | ref | 引用 |
 | report | rpt | 报告 |
-| release | rls | 释放、公开、发布 |
+| release | rls | 释放、公开、发布、放开 |
+| reset | rst | 复位 |
 | response | resp | 响应 |
 | restart | rst | 重新启动 |
 | right | rt | 右边的，右侧的 |
-| ring | rg | 环 |
+| ring | rng | 环 |
 | row | row | 行 |
 | sample | smp | 采样，采样值，样品 |
 | save | sv | 保存 |
@@ -240,8 +266,10 @@ tags:
 | send | snd | 发送 |
 | sequence | seq | 序列，次序 |
 | serial | ser | 顺序排列的，连续的，多次的 |
+| series | ser | 系列 |
 | set | set | 设置 |
 | set | set | 集合 |
+| shift | shft | 移位 |
 | short | shrt | 短的 |
 | sigle | sgl | 单一的 |
 | similarity | sim | 相似，类似 |
@@ -249,7 +277,9 @@ tags:
 | soft | sft | 软件 |
 | source | src | 源 |
 | space | sp | 间距，空间 |
+| specification | spec | 说明书 |
 | stable | stb | 稳定的，稳固的 |
+| stage | stg | 状态 |
 | start | strt | 开始 |
 | state | sta | 状态 |
 | static | stc | 静态的 |
@@ -257,8 +287,10 @@ tags:
 | string | str | 字符串 |
 | study | st | 学习 |
 | style | sty | 风格，样式 |
+| sublevel | sublv | 子级 |
 | success | scs | 成功 |
 | summation | sum | 和 |
+| super | supr | 超级 |
 | surplus | sur | 剩余，过剩，盈余 |
 | suspend | sus | 暂停，挂起 |
 | synchronization | sync | 同步 |
@@ -273,6 +305,7 @@ tags:
 | text | txt | 文本 |
 | then | thn | 然后，那么 |
 | thickness | thk | 粗细 |
+| tick | tik | 票 |
 | time | tm | 时间 |
 | timer | tmr | 计时器 |
 | timeout | tmot | 超时 |
@@ -292,12 +325,14 @@ tags:
 | channel | ch | 通道 |
 | color | clr | 颜色 |
 | column | col | 列 |
+| condition | cond | 条件 |
 | control | ctrl | 控制 |
 | handle | hdl | 处理 |
 | hexadecimal | hex | 十六进制 |
 | high | hi | 高 |
 | host | hst | 主人 |
 | hover | hov | 悬停 |
+| offset | ofst | 偏移 |
 | operate | opr | 操作，运转 |
 | original | orig | 起初的，原来的，最早的 |
 | other | otr | 其他 |
@@ -307,24 +342,28 @@ tags:
 | repeat | rpt | 重复 |
 | request | req | 请求 |
 | return | rtn | 返回 |
-| rounding | rd | 四舍五入 |
+| route | rte | 路线，航线，路由 |
+| round | rd | 四舍五入 |
 | signal | sig | 信号 |
 | status | sts | 状态 |
 | stack | stk | 栈区 |
 | standard | std | 标准 |
 | thread | thd | 线程 |
 | threshold | thr | 阈值 |
+| triangle | tri | 三角形 |
 | trigger | trig | 触发 |
 | trim | trim | 修剪、切除、校准（频率） |
 | up | up | 上 |
 | uplink | ul | 上行链路 |
 | background | bg | 背景 |
+| base | b | 基础 |
 | escape | esc | 退出 |
 | user | usr | 用户 |
 | lift | lft | 举起，抬起 |
 | list | lst | 列表 |
 | server | srv | 服务 |
 | manager | mgr | 管理者 |
+| manual | man | 手册 |
 | measure | meas | 测量 |
 | merge | mrg | 合并 |
 | modular | mod | 模（除法余数） |
@@ -345,6 +384,7 @@ tags:
 | length | len | 长度 |
 | node | node | 结点 |
 | oracle | ora | 数据库 |
+| outcell | oc | / |
 | output | output | 输出 |
 | over | ov | 超过 |
 | overflow | ovf | 溢出，上溢出 |
@@ -396,6 +436,7 @@ tags:
 | run | run | 运行 |
 | select | sel | 选择 |
 | test | tst | 测试 |
+| version | ver | 版本 |
 | vertical | vert | 垂直 |
 | view | vw | 视野，见解 |
 | vice | vice | 副的 |
@@ -405,10 +446,13 @@ tags:
 | warning | wrn | 警告 |
 | wave | wv | 波动 |
 | waveform | wf | 波形 |
+| weak | wk | 弱 |
 | weight | wt | 重量，权重 |
 | word | wd | 单词，字 |
 | work | wrk | 工作 |
 | write | wr | 写 |
+| year | yr | 年 |
+| zone | ze | 区域，地带 |
 
 ## 3 常用控件命名及缩写
 
@@ -432,7 +476,7 @@ tags:
 | pageIndicator | pgindic | Tab分页控件 |
 | radioButton | rdo | 单选框 |
 | rangeSlider | rngsld | 滑块 |
-| screen | scr | 屏 |
+| screen | scr | 屏，筛选 |
 | scrollView | svw | 视图滚动 |
 | scrollBar | vsb（垂直）/hsb（水平） | 滚动条 |
 | slave | slv | 仆从 |
@@ -459,6 +503,7 @@ tags:
 | verticallayout | vl | 垂直布局 |
 | widget | wg | 小器物，小装置 |
 | window | win | 窗口 |
+| force | frc | 强制 |
 | form | frm | 表单 |
 | textBox | txt | 文本框 |
 | textBrowser | tb | 文本浏览器 |
@@ -473,6 +518,8 @@ tags:
 | advanced peripheral bus | apb | 高性能外围设备总线 |
 | advanced high peripheral bus | ahb | 高级高性能外围设备总线 |
 | baud rate | br | 波特率 |
+| bit endian | be | 大端 |
+| dead zone | dz | 死区 |
 | diagnostic trouble code | dtc | 诊断故障码 |
 | initialize configure | icg | 初始化配置 |
 | input/output | io | 输入输出 |
@@ -491,6 +538,8 @@ tags:
 | embedded flash management | efm | 嵌入式Flash管理 |
 | forward error correcting code | fec | 前向纠错码 |
 | serial port | sp | 串口 |
+| shift right | sr | 右移 |
+| shift left | sl | 左移 |
 | static random-access memory | sram | 静态随机存取存储器 |
 | stop bits | sb | 停止位 |
 | general purpose input output | gpio | 通用性输入输出 |
@@ -525,6 +574,7 @@ tags:
 | external interrupts | exti | 外部中断 |
 | high speed external | hse | 外部高速 |
 | high speed internal | hsi | 内部高速 |
+| little endian | le | 小端 |
 | low Speed external | lse | 外部低速 |
 | low Speed Internal | lsi | 外部低速 |
 | falling edge | fe | 下降沿 |
