style(std): 进行规范化修改，新增单词缩写
1、对模块代码进行规范化修改；
2、新增单词缩写；

--- a/nm/编程常用命名及缩写.md
+++ b/nm/编程常用命名及缩写.md
@@ -57,6 +57,7 @@ tags:
 | box | bx | 盒，箱 |
 | broadcast | bc | 广播 |
 | buffer | buf | 缓冲区 |
+| burst | b | 爆炸，爆裂 |
 | bus | bus | 总线 |
 | bypass | byp | 避开，绕过 |
 | byte | by/B | 字节 |
@@ -74,6 +75,7 @@ tags:
 | close | cl | 关闭 |
 | circular | cir | 圆形 |
 | circuit | crt | 电路 |
+| code | cd | 代码，编码 |
 | collect | coll | 采集，收集 |
 | command | cmd | 命令 |
 | communication | comm | 通讯 |
@@ -115,6 +117,7 @@ tags:
 | down | dn | 下 |
 | doxygen | dox | 编程辅助工具 |
 | downlink | dl | 下行链路 |
+| dsss | ds | DSSS（直接序列扩频） |
 | duration | dur | 持续时间 |
 | dynamic | dyna | 动态的 |
 | each | ea | 每个 |
@@ -271,12 +274,14 @@ tags:
 | set | set | 集合 |
 | shift | shft | 移位 |
 | short | shrt | 短的 |
+| side | sd | 侧面，边 |
 | sigle | sgl | 单一的 |
 | similarity | sim | 相似，类似 |
 | size | sz | 大小 |
 | soft | sft | 软件 |
 | source | src | 源 |
 | space | sp | 间距，空间 |
+| speed | spd | 速度 |
 | specification | spec | 说明书 |
 | stable | stb | 稳定的，稳固的 |
 | stage | stg | 状态 |
@@ -578,6 +583,7 @@ tags:
 | low Speed external | lse | 外部低速 |
 | low Speed Internal | lsi | 外部低速 |
 | falling edge | fe | 下降沿 |
+| fast host id | fhid | 快速主机ID |
 | floating processing unit | fpu | 浮点计算单元 |
 | flow control | fc | 流控制 |
 | interrupt service routines | isr | 中断服务函式 |
